--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta http-equiv="Pragma" content="no-cache">
   </head>
   <body><p><span style="color:#ffffff;"><span style="font-size:36px;"><strong><span style="font-family:Times New Roman,Times,serif;"><span style="background-color:#8e44ad;">&nbsp;QR/NEWS&nbsp;</span></span></strong></span></span><span style="font-size:36px;"><span style="color:#8e44ad;"><strong><span style="font-family:Times New Roman,Times,serif;"><br></span></strong></span></span><span style="font-size:28px;"><span style="color:#8e44ad;"><strong></strong></span></span><em><span style="font-size:24px;"><span style="color:#8e44ad;"><strong><span style="font-family:Times New Roman,Times,serif;">
-    édition du 09/01/22 19:03<br></span></strong></span></span></em><span style="font-size:14px;">
-    <strong>Retrouvez la dernière édition sur </strong><a href="bit.do/qrnews"><strong>bit.do/qrnews<br></strong></a>
+    édition du 09/01/22 19:04<br></span></strong></span></span></em><span style="font-size:14px;">
+    <strong>Retrouvez la dernière édition sur </strong><a href="https://bit.do/qrnews"><strong>bit.do/qrnews<br></strong></a>
     </a><span style="color:#8e44ad;"><strong></strong></span>
     
     <a ref="https://site-qrnews.github.io/questions_reponses.html">Questions / réponses</a>
