--- a/questions_reponses.html
+++ b/questions_reponses.html
@@ -7,7 +7,7 @@
     <a href="mailto:qrnews@protonmail.com">qrnews@protonmail.com<br></a>
     <span style="color:#9b59b6;"><strong><span style="font-size:24px;">
       <span style="font-family:Times New Roman,Times,serif;">Questions / réponses</span></span><span style="font-size:26px;"><span style="font-family:Times New Roman,Times,serif;"><br></span></span>
-      <a href="http://bit.do/qrnews"><span style="font-family:Arial,Helvetica,sans-serif;">(cliquer ici pour retourner à la page des news)</span>
+      <a href="https://site-qrnews.github.io/index.html"><span style="font-family:Arial,Helvetica,sans-serif;">(cliquer ici pour retourner à la page des news)</span>
       </a>
       </strong></span><br></p>
     <p><strong>Pour accéder aux QRNEWS</strong> :&nbsp;utiliser l'adresse&nbsp;<a href="http://bit.do/qrnews">http://bit.do/qrnews</a>&nbsp;ou le QRCODE. 
