--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head><meta charset="utf-8">
-  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
   </head>
   <body><p><span style="color:#ffffff;"><span style="font-size:36px;"><strong><span style="font-family:Times New Roman,Times,serif;"><span style="background-color:#8e44ad;">&nbsp;QR/NEWS&nbsp;</span></span></strong></span></span><span style="font-size:36px;"><span style="color:#8e44ad;"><strong><span style="font-family:Times New Roman,Times,serif;"><br></span></strong></span></span><span style="font-size:28px;"><span style="color:#8e44ad;"><strong></strong></span></span><em><span style="font-size:24px;"><span style="color:#8e44ad;"><strong><span style="font-family:Times New Roman,Times,serif;">
-    édition du 09/01/22 19:07<br></span></strong></span></span></em><span style="font-size:14px;">
+    édition du 09/01/22 19:08<br></span></strong></span></span></em><span style="font-size:14px;">
     <strong>Retrouvez la dernière édition sur </strong>
     <a href="https://site-qrnews.github.io/index.html"><strong>bit.do/qrnews<br></strong></a>
     </a><span style="color:#8e44ad;"><strong></strong></span>
